fix accordion on mobile

--- a/sass/core/_mixins-master.scss
+++ b/sass/core/_mixins-master.scss
@@ -54,6 +54,7 @@
   	margin-left: auto;
   	padding-right: 1.5rem;
   	padding-left: 1.5rem;
+	width: 100%;
 
 	@media only screen and (min-width: 48em) {
 		width: 46rem;
