--- a/style-editor.css
+++ b/style-editor.css
@@ -217,6 +217,7 @@
 	margin-left: auto;
 	padding-right: 1.5rem;
 	padding-left: 1.5rem;
+	width: 100%;
 }
 
 @media only screen and (min-width: 48em) {
@@ -244,8 +245,8 @@
 }
 
 .entry-content > [class*="wp-block-"]:not(.alignfull).alignwide {
-	margin-right: 1.5rem;
-	margin-left: 1.5rem;
+	margin-right: 2rem;
+	margin-left: 2rem;
 }
 
 .entry-content .alignfull > .wp-block-group__inner-container {
@@ -253,6 +254,7 @@
 	margin-left: auto;
 	padding-right: 1.5rem;
 	padding-left: 1.5rem;
+	width: 100%;
 }
 
 @media only screen and (min-width: 48em) {
@@ -376,10 +378,6 @@
 	width: 168px;
 	height: 8px;
 	display: block;
-}
-
-.wp-block-button:not(:last-child) {
-	margin-right: 1rem;
 }
 
 .wp-block-button:not(.is-style-with-icon) .wp-block-button__link {
@@ -732,17 +730,23 @@
 	color: #ffffff;
 }
 
+.accordion-block .accordion-btn .container {
+	display: flex;
+	align-items: center;
+}
+
+@media (max-width: 768px) {
+	.accordion-block .accordion-btn .container {
+		width: 100%;
+	}
+}
+
 .accordion-block .accordion-btn h3 {
 	font-size: 1.25rem;
 	margin: 0;
 }
 
 .accordion-block .accordion-btn span {
-	line-height: 1.8;
-}
-
-.accordion-block .accordion-btn span:before {
-	content: '\002B';
 	color: #ffffff;
 	background-color: #244985;
 	border-radius: 100%;
@@ -752,11 +756,19 @@
 	margin-right: calc(0.5 * 1rem);
 	float: left;
 	text-align: center;
+	line-height: 1.8;
 }
 
-.accordion-block .active span:before {
-	content: "\2212";
+.accordion-block .accordion-btn span::before {
+	content: '\002B';
+}
+
+.accordion-block .active span {
 	background-color: #E45510;
+}
+
+.accordion-block .active span::before {
+	content: '\2212';
 }
 
 .accordion-block .panel {
